leetcode task #797